syntax = "proto2";

option go_package = ".;micromsg";

import "MicroMsgBase.proto";

message MicroMsgRequestNew {
    optional SKBuiltinString_t toUserName = 1;
    optional string content = 2;
    optional uint32 type = 3;
    optional uint32 createTime = 4;
    optional uint32 clientMsgId = 5;
    optional string msgSource = 6;
    optional uint32 ctrlBit = 7;
}

message MicroMsgResponseNew {
    optional int32 ret = 1;
    optional SKBuiltinString_t toUserName = 2;
    optional uint32 msgId = 3;
    optional uint32 clientMsgId = 4;
    optional uint32 createTime = 5;
    optional uint32 serverTime = 6;
    optional uint32 type = 7;
    optional uint64 newMsgId = 8;
}

message NewSendMsgRequest {
    optional int32 count = 1;
    repeated MicroMsgRequestNew msgRequestList = 2;
}

message NewSendMsgResponse {
    optional BaseResponse baseResponse = 1;
    optional int32 count = 2;
    repeated MicroMsgResponseNew msgResponseList = 3;
}
